# Village-Game

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  TsGame.sln
Demo/: CMakeLists.txt  Demo.vcxproj  Demo.vcxproj.filters  main.cpp  test_json.json
Grid/: Grid.vcxproj  camera.cpp  camera.h  main.cpp
TsGame/: CMakeLists.txt  ConfigManager.h  GameManager.h  MallocHook.h  Map.h  Route.h  Tile.h  TsGame.vcxproj  TsGame.vcxproj.filters  config.json  enemy_type.h  main.cpp  singleton.h
TsGame/include/: Animation.h  BulletManager.h  ConfigManager.h  HomeManager.h  ResourcesManager.h  Route.h  Tile.h  Timer.h  Vector2.h  WaveManager.h  enemy.h  enemy_goblin.h  enemy_goblin_priest.h  enemy_manager.h  enemy_skeleton.h  enemy_slim.h  enemy_slim_king.h  game_manager.h  map.h  singleton.h  wave.h
TsGame/sources/: main.cpp
